# CGBV

./: .gitignore  pyproject.toml
cgbv/: main.py
cgbv/config/: __init__.py  env.py  settings.py
cgbv/core/: gap_analysis.py  grounded_template_ir.py  logic_compiler.py  logic_dsl.py  multi_witness.py  (+7 more)
configs/: folio_deepseek_compile_robustness_probe.yaml  folio_deepseek_debug.yaml  folio_deepseek_error_respin.yaml  folio_deepseek_error_respin_regress.yaml  folio_glm_debug.yaml  folio_openai_full.yaml  modelscope_qwen.yaml  naive_llm_folio_deepseek_debug.yaml  naive_llm_folio_glm_debug.yaml  naive_llm_prontoqa_deepseek_debug.yaml  naive_llm_prontoqa_glm_debug.yaml  naive_llm_proofwriter_deepseek_debug.yaml  naive_llm_proofwriter_glm_debug.yaml  naive_llm_proverqa_deepseek_debug.yaml  naive_llm_proverqa_glm_debug.yaml  prontoqa_deepseek_debug.yaml  proofwriter_deepseek_debug.yaml  proverqa_deepseek_compile_robustness_probe.yaml  proverqa_deepseek_debug.yaml
naive_llm/: __init__.py  config.py  main.py  metrics.py  prompting.py  report.py  runner.py
tests/: prompt_engine_list_demo.yaml  prompt_engine_list_t.j2  prompt_engine_structured_demo.yaml  prompt_engine_structured_t.j2  test_code_executor_sanitization.py  test_few_shot_examples_compile.py  test_glm_client.py  test_grounded_template_ir.py  test_logic_dsl_pipeline_contract.py  test_naive_llm_prompting.py  test_phase1_compiler_robustness.py  test_phase1_formalize_validation.py  test_phase3_ir_regressions.py  test_phase3_runtime_validation.py  test_pipeline_violation_helpers.py  test_prompt_engine_few_shot.py
(+47 files in other folders)
